# asr-cli

./: LICENSE  README.md  install-windows.bat  pyproject.toml
src/asr_cli/: cli.py
