[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-cli-win"
version = "0.1.0"
description = "ASR CLI for Windows using Faster-Whisper"
requires-python = ">=3.12"
dependencies = ["faster-whisper>=1.0.0", "av>=10.0.0"]

[project.scripts]
asr-cli = "asr_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]